@@ -1,3 +1,6 @@
+2020-06-27:
+  - Documented 'simulate()' methods.
+
 2020-06-11:
   - Implemented (approximate) REML estimator.
 
